--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/emp
 spring.datasource.username=root
 spring.datasource.password=hao123
-spring.jpa.hibernate.ddl-auto=update
+server.port = 8080
+
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.cache=false
